# vimail

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  conanfile.txt
include/: API.h  MailClient.h  TUI.h  UI.h
src/: API.cpp  CMakeLists.txt  MailClient.cpp  TUI.cpp  UI.cpp  main.cpp
